fixed overflow for scrolling

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body {
     position: relative;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     margin: 0;
 }
 .cat{
